--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-minimal
-title: MIXR at CHItaly 2021
+title: MIXR - 1st International Workshop on Multi-party Interaction in eXtended Reality (CHItaly 2021)
